--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,11 @@ h3 {
     grid-template-columns: 2fr 2fr 2fr;
     grid-column: 1 / 4;
 }
+
+@media screen and (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: 0.001ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.001ms !important;
+    }
+}
